--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -2,14 +2,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.niephox.methophotos.Activities.LoginActivity"
-    android:background="@color/colorPrimary">
+
+    tools:context="com.example.niephox.methophotos.Activities.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
@@ -20,6 +21,10 @@
         android:layout_marginBottom="8dp"
         android:visibility="gone" />
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="27dp" />
+
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
@@ -28,24 +33,23 @@
         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <TextView
                 android:id="@+id/LoginHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/shadowsintolight"
-                android:text="Login"
+                android:fontFamily="@font/ostrich_regular"
+                android:text="Picture_it"
                 android:textAlignment="center"
+                android:textColor="#0013c2"
                 android:textSize="30sp"
-                android:textStyle="italic"
                 android:typeface="normal" />
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="125dp"/>
+                android:layout_height="108dp" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -55,11 +59,14 @@
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/shadowsintolight"
+                    android:fontFamily="@font/ostrich_regular"
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
+                    android:popupBackground="#0013c2"
                     android:singleLine="true"
+                    android:textColor="#0013c2"
+                    android:textColorHint="#0013c2"
                     android:textSize="24sp" />
 
             </android.support.design.widget.TextInputLayout>
@@ -70,10 +77,13 @@
 
                 <EditText
                     android:id="@+id/password"
+                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/shadowsintolight"
-                    android:hint="@string/prompt_password"
+                    android:fontFamily="@font/ostrich_regular"
+                    android:hint="Password"
+                    android:shadowColor="#0013c2"
+
                     android:imeActionId="6"
                     android:imeActionLabel="@string/action_sign_in_short"
                     android:imeOptions="actionUnspecified"
@@ -81,29 +91,37 @@
                     android:maxLines="1"
                     android:singleLine="true"
                     android:textAlignment="center"
+                    android:textColor="#0013c2"
+                    android:textColorHint="@android:color/holo_blue_light"
                     android:textSize="24sp" />
 
             </android.support.design.widget.TextInputLayout>
 
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="90dp" />
+
             <Button
                 android:id="@+id/email_sign_in_button"
-                android:fontFamily="@font/shadowsintolight"
-                style="?android:textAppearanceSmall"
+                android:textColor="#0013c2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/ostrich_regular"
                 android:text="Sign In"
                 android:textStyle="bold" />
+
             <Button
                 android:id="@+id/btRegister"
-                android:fontFamily="@font/shadowsintolight"
-                style="?android:textAppearanceSmall"
+                android:textColor="#0013c2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/ostrich_regular"
                 android:text="Register"
                 android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
