--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -40,7 +40,7 @@
                 android:id="@+id/LoginHeader"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/ostrich_regular"
+                android:fontFamily="@font/shadowsintolight"
                 android:text="Picture_it"
                 android:textAlignment="center"
                 android:textColor="#0013c2"
@@ -49,18 +49,18 @@
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="108dp" />
+                android:layout_height="96dp" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:textColorHint="#0013c2">
 
                 <AutoCompleteTextView
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/ostrich_regular"
-                    android:hint="@string/prompt_email"
+                    android:hint="Email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:popupBackground="#0013c2"
@@ -73,11 +73,11 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:textColorHint="#0013c2">
 
                 <EditText
                     android:id="@+id/password"
-                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/ostrich_regular"
@@ -92,14 +92,14 @@
                     android:singleLine="true"
                     android:textAlignment="center"
                     android:textColor="#0013c2"
-                    android:textColorHint="@android:color/holo_blue_light"
+                    android:textColorHint="#0013c2"
                     android:textSize="24sp" />
 
             </android.support.design.widget.TextInputLayout>
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="90dp" />
+                android:layout_height="89dp" />
 
             <Button
                 android:id="@+id/email_sign_in_button"
@@ -107,9 +107,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:fontFamily="@font/ostrich_regular"
                 android:text="Sign In"
-                android:textStyle="bold" />
+                android:textSize="24dp"
+                />
 
             <Button
                 android:id="@+id/btRegister"
@@ -117,9 +117,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:fontFamily="@font/ostrich_regular"
                 android:text="Register"
-                android:textStyle="bold" />
+                android:textSize="24dp"
+                />
 
         </LinearLayout>
     </ScrollView>
