--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#0013c2</color>
     <color name="colorSecondary">#0013c2</color>
-    <color name="colorPrimaryDark">#374046</color>
+    <color name="colorPrimaryDark">#0013c2</color>
     <color name="colorAccent">#0013c2</color>
     <color name="colorSmooth">#c19d7d</color>
     <color name="colorSecondaryDark">#495e4d</color>
